after all changes, the hamburger menu wouldn't open and side nav was disappearing behind skewed background. after a lot of trial, finally figured out it was the opacity of header image that was the problem. fixed it

--- a/css/master.css
+++ b/css/master.css
@@ -47,8 +47,10 @@ p {
     -ms-transform: skewY(5deg); /* IE 9 */
     -webkit-transform: skewY(5deg); /* Safari */
     transform: skewY(5deg); /* Standard syntax */
+  
+    
 }
- #Teachers h2, #Teachers h3,  #Teachers p, #Prices h2, #Prices p, #Prices .Sign, #Classes h2, #Classes .Sign,.computertimetable, .mobiletimetable {
+#About img, .aboutUs, #Teachers h2, #Teachers h3,  #Teachers p, #Prices h2, #Prices p, #Prices .Sign {
    -ms-transform: skewY(-5deg); /* IE 9 */
     -webkit-transform: skewY(-5deg); /* Safari */
     transform: skewY(-5deg); /* Standard syntax */
@@ -83,7 +85,7 @@ nav li {
 nav li a {
     line-height: 120px;
     text-decoration: none;
-    color: #128944;
+    color: #15435b;
     text-transform: uppercase;
     font-size: 22px;
 }
@@ -178,7 +180,7 @@ nav ul li a:hover {
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
-    z-index: 10000000;
+    z-index: 5;
     top: -5px;
     right: 105%;
 }
@@ -193,22 +195,24 @@ nav ul li a:hover {
 
 
 
+
+
+
 /* Header */
-header {
+.background {
     background-image: url(../images/Moutains-At-Om.jpg);
-  background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.7;
 }
+
 h1 {
     font-size: 40px;
-padding-bottom: 100px;
+padding-bottom: 170px;
 }
 
  #main {
      display: flex;
      align-items: flex-end;
-     height: 650px;
+     height: 700px;
      width: 90%;
      margin: auto;
      
@@ -220,12 +224,12 @@ padding-bottom: 100px;
 }   
 
 #main .Sign {
-    margin: 50px 10px;
+    margin: 10px 10px 50px 10px;
 }
 #main .social img {
     height: 60px;
     padding: 5px;
-    margin: 10px;
+    margin: 10px 10px 60px 10px;
     
 }
 
@@ -265,21 +269,21 @@ nav li {
     width: 100%;
     z-index: 10000000;
     background-color: #e8e9eb;
-    opacity: 0.9;   
+    opacity: 0.95;   
     }
 
     
 h1 {
-    font-size: 22px;
-    padding:0 30px 50px 0;
+    font-size: 26px;
+    padding:0 30px 60px 0;
       
 } 
     #main .Sign {
-    margin-bottom:40px;
+    margin-bottom:60px;
 }
     #main .social img {
     height: 40px;
-    margin: 2px;
+    margin: 5px 5px 100px 5px;
     
 }
     #main ul{
@@ -352,7 +356,9 @@ nav ul{
 
 .menu-icon {
     display: block;
+    z-index: 100000;
     }
+    
 #mySidenav {
     display: none;
     }
@@ -370,7 +376,7 @@ nav ul{
 } 
  #main .social img {
     height: 45px;
-    margin: 15px; 
+    margin: 50px 15px; 
        
 }
  #main ul{
@@ -378,14 +384,14 @@ nav ul{
     margin: 20px;
 } 
     h1 {
-    margin-top: 170px;
-    font-size: 22px;
+    margin: 170px 0 50px 0;
+    font-size: 24px;
     padding: 15px;
     text-align: center; 
         
 } 
 #main .Sign {
-    margin:40px;
+    margin:50px 0 20px 0;
 }
 
 .showing {
@@ -402,6 +408,7 @@ nav ul{
     min-height: 650px;
     background-color: #f9abb8; 
     display: flex;
+    margin-top: -50px;
 }
 #About img {
     height:500px;
@@ -431,7 +438,6 @@ nav ul{
     padding-top: 20px;
     width: 300px;
 }
-    
 }
 
 /* Mobile */
@@ -517,11 +523,14 @@ margin-left: 5%;
 
 #Prices {
     height: 550px;
-    background-color: #f9abb8;
-  
+    background-color: #fff; 
 }
+
 #Prices h2 {
     margin-bottom: 90px;
+}
+#Prices h2, #Prices p {
+    color: #222;
 }
 .price {
    display: flex;
@@ -531,7 +540,8 @@ margin-left: 5%;
   
     margin: 0 auto;
     padding: 40px;
-    border: 3px solid #24295f; 
+    border: 3px solid black;
+    border-radius: 4px;
     text-align: center;
     width: 200px;
     
@@ -546,23 +556,23 @@ strong {
     font-weight: bold;
 }
 .leaves {
-    background-image: url(../images/Lotus-At-Om.jpg);
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url(../images/Lotus-At-Om.jpg);
     background-size: cover;
 }
 .buddha {
-    background-image: url(../images/Buddha-At-Om.jpg);
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url(../images/Buddha-At-Om.jpg);
     background-size: cover;
 }
 .stones {
-    background-image: url(../images/Stones-At-Om.jpg);
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url(../images/Stones-At-Om.jpg);
     background-size: cover;
 }
 
 /* Sign Up Button */
 .Sign {
-    background-color: #128944;
-    border-radius: 5%;
-    color: #e8e9eb;
+    background-color: #f9abb8;
+    border-radius: 50px;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -570,8 +580,7 @@ strong {
     font-size: 16px;
     margin: 15px;
     cursor: pointer;
-    
-     margin: 80px 0 50px 40%;
+    margin: 80px 0 50px 40%;
 }
 .Sign:hover {
     opacity: 0.7;
@@ -581,14 +590,14 @@ strong {
 /* Tablet */  
 @media screen and (max-width: 768px) {
     
- .price > div {
+.price > div {
      margin: 20px;
      padding: 30px;
     }
-    #Prices h2 {
-    margin-bottom: 20px;
-}
     
+#Prices h2 {
+    margin-bottom: 20px;
+}    
 }
 
 /* Mobile */
@@ -620,9 +629,10 @@ strong {
     padding: 50px 0 50px 0;
 }
 tr, td, th {
-    border: 1px solid #24295f;
+    border: 1px solid #fff;
     text-align: center;
     padding: 15px;
+    color: #fff;
 }
 
 th {
@@ -643,6 +653,8 @@ margin-left: 5%;
 
 
 
+
+
 /* Tablet */ 
 @media screen and (max-width: 768px) {
     #Classes {
@@ -653,7 +665,7 @@ margin-left: 5%;
     }
   
     .mobiletimetable {
-    display: block;
+    display: inline-block;
         margin: auto;
         width: 80%;
     }
@@ -710,11 +722,10 @@ td, th {
 
 /* Contact Page */
 #Contact {
-    background-image: url(../images/Contact-At-Om.jpg);
+    background-image: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url(../images/Contact-At-Om.jpg);
   background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.7;
-    z-index:-1;  
+      
 }
 #Contact h2 {
     margin-left: 5%;
@@ -743,6 +754,7 @@ td, th {
     width: 300px;
     height: 300px;
     margin: 10px 10px 10px 0;
+    border-radius: 4px;
 }
 .contactForm a {
     text-decoration: none;
@@ -790,6 +802,7 @@ td, th {
 
 
 /*Credit Card*/
+/*
 #signUp {
     display: none;
 }
@@ -902,3 +915,4 @@ input[type="submit"]:hover{
     float: none;
   }
 }
+*/
